src/test/error/shadowing.lns
fn test( val:int ) {
   fn ( val:str ) {
      let val = 1;
   }
}
